# Lipsia

./: AUTHORS  CMakeLists.txt  ChangeLog  LITERATURE  README  REQUIREMENTS  THANKS  lipsia-help
src/: CMakeLists.txt
src/backward_compatibility/: CMakeLists.txt
src/backward_compatibility/niftov/: CMakeLists.txt  niftfuncreorder.c  niftov.c  niftsort.c
src/backward_compatibility/vdeform/: CMakeLists.txt  trilinear.H  util.H  vdeform.C
src/backward_compatibility/vdemon/: CMakeLists.txt  gauss.H  gradient.H  maxwell.C  maxwell.H  trilinear.H  util.H  vdemon.C
src/backward_compatibility/vdotrans/: CMakeLists.txt  DoTrans.c  Shuffle.c  SliceOrientation.c  vdotrans.c
src/backward_compatibility/vfunctrans/: CMakeLists.txt  FuncCompress.c  Functrans.c  SliceOrientation.c  TransTimeStep.c  vfunctrans.c
src/backward_compatibility/vnormalize/: CMakeLists.txt  Normalize.c  vnormalize.c
src/backward_compatibility/vreg3d/: CMakeLists.txt  GetTransf.c  IniShift.c  Orientation.c  Refine.c  Reg3d.c  vreg3d.c
src/backward_compatibility/vtonifti/: CMakeLists.txt  cdatadealer.h  cniftifile.cpp  cniftifile.h  cvimage.cpp  cvimage.h  main.cpp
src/backward_compatibility/vzmapborder/: CMakeLists.txt  vzmapborder.c
src/include/: itkAdapter_impl.hpp
src/new/: CMakeLists.txt
src/new/isisdump/: CMakeLists.txt  isisdump.cpp
src/new/vReHo/: CMakeLists.txt  Kendall.c  vReHo.c
src/new/valign3d/: CMakeLists.txt  isisRegistrationFactory3D.hpp  isisRegistrationFactory3D_impl.hpp  isisreg3d.cxx  itkAdapter.hpp  itkAdapter_impl.hpp
src/new/vartefact/: CMakeCache.txt  CMakeLists.txt  vartefact.c
src/new/vccm/: CMakeLists.txt  Kendall.c  vccm.c
src/new/vcheckdata/: CMakeLists.txt  Makefile  vcheckdata.c
src/new/vcompcor/: CMakeLists.txt  FreqFilter.c  HighpassFilter.c  MinVals.c  PCA.c  vcompcor.c
src/new/vcorr/: CMakeLists.txt  Correlation.c  KendallDist.c  MI.c  ROI.c  vcorr.c
src/new/vcovariates/: CMakeLists.txt  vcovariates.c
src/new/vdenoise/: CMakeLists.txt  vdenoise.c
src/new/vdespike/: CMakeLists.txt  Makefile
src/new/vdotrans3d/: CMakeLists.txt  isisTransformMerger3D.cpp  isisTransformMerger3D.hpp  isisdotrans3d.cxx  itkAdapter.hpp  itkAdapter_impl.hpp
src/new/vecm/: CMakeLists.txt  vecm.c
src/new/veta2/: CMakeLists.txt  veta2.c
src/new/vflip3d/: CMakeLists.txt  vflip3d.c
src/new/vgaussianize/: CMakeLists.txt  vgaussianize.c
src/new/vglobalmean/: CMakeLists.txt  vglobalmean.c
src/new/vncm/: CMakeLists.txt  vncm.c
src/new/vnormvals/: CMakeLists.txt  vnormvals.c
src/new/volumeinfo/: CMakeLists.txt  volumeinfo.c
src/new/voverlap/: CMakeLists.txt  voverlap.c
src/new/vpaired_ccm/: CMakeLists.txt  vpaired_ccm.c
src/new/vpaired_ttest/: CMakeLists.txt  Gaussianize.c  vpaired_ttest.c
src/new/vpowerspectrum/: CMakeLists.txt  vpowerspectrum.c
src/new/vresiduals/: BlockIO.c  CMakeLists.txt  GlobalMean.c  gauss.c  gsl_dutils.c  gsl_futils.c  gsl_utils.h  vresiduals.c
src/new/vrmglobal/: CMakeLists.txt  GlobalMean.c  gauss.c  vrmglobal.c
src/new/vsimmat/: CMakeLists.txt  Makefile  vsimmat.c
src/new/vspectralcluster/: CMakeLists.txt  Eigen.c  KMeans.c  LaplacianMatrix.c  LaplacianMatrix.c.lapack  vspectralcluster.c
src/new/vspectralecm/: CMakeLists.txt  QuickMorph2d.c  vspectralecm.c
src/new/vsrad/: CMakeLists.txt  SRAD.c  vsrad.c
src/new/vstats/: CMakeLists.txt  vstats.c
src/new/vswapdim/: CMakeLists.txt  isisflip.cpp  isisswap.cpp
src/new/vsymmetric/: CMakeLists.txt  vsymmetric.c
src/new/vvinidi/: CMakeLists.txt  isisconv.cpp
src/old/: CMakeLists.txt
src/old/brutov2/: BrukerPV11Reader.C  BrukerPV11Reader.h  BrukerPV11ToNiftiConverter.C  BrukerPV11ToNiftiConverter.h  BrukerPV11ToVistaConverter.C  BrukerPV11ToVistaConverter.h  BrukerPV3Reader.C  BrukerPV3Reader.h  BrukerPV3ToNiftiConverter.C  BrukerPV3ToNiftiConverter.h  BrukerPV3ToVistaConverter.C  BrukerPV3ToVistaConverter.h  CMakeLists.txt  Converter.h  ConverterConfiguration.C  ConverterConfiguration.h  ConverterFactory.C  ConverterFactory.h  DoubleOption.C  DoubleOption.h  DoubleRangeValidator.C  DoubleRangeValidator.h  EmptyConverter.C  EmptyConverter.h  FileOption.C  FileOption.h  FileRegexpValidator.C  FileRegexpValidator.h  FileTypeValidator.C  FileTypeValidator.h  IDatasetReader.h  IDatasetWriter.h  IImageDataset.h  IOption.C  IOption.h  IValidator.h  Image.C  Image.h  ImageDatasetParameter.C  ImageDatasetParameter.h  (+33 more)
src/old/lib_arfit/: CMakeLists.txt  arfit.c  arfit.h  arfit_base.h  arfit_error.c  arfit_error.h  arfit_schloegl.c  arfit_schloegl.h  arfit_schneider.c  arfit_schneider.h  arfit_via.c  arfit_via.h  gsl_matrix_wrapper.c  gsl_matrix_wrapper.h  readme.txt
src/old/lib_lipsia/: CMakeLists.txt  Convolve.c  GaussConv.c  GeoInfo.c  GetVersion.c  SmoothnessEstim.c  StatsConversions.c  Talairach.c  getMemSize.c  gsl_dutils.c  gsl_futils.c  gsl_utils.h  via2gsl.c  wilcox_pvals.c  wilcoxtab18.c  wilcoxtab19.c  wilcoxtab20.c  wilcoxtab21.c  wilcoxtab22.c  wilcoxtab23.c  wilcoxtab24.c  wilcoxtab25.c  wilcoxtab26.c  wilcoxtab27.c  wilcoxtab28.c  wilcoxtab29.c  wilcoxtab30.c  wilcoxtables.c
src/old/lib_vlh/: .cvsignore  CMakeLists.txt  VCheck.C  VCheck.h  VLCorr.C  VLCorr.h  VLTools.C  VLTools.h  bildWin.C  bildWin.h  bilderCW.C  bilderCW.h  dialog.C  dialog.h  fenster1.C  fenster1.h  flow.C  flow.h  interpolator.cc  interpolator.hh  lLoad.C  lLoad.h  lView.C  lView.h  openGL.C  openGL.h  pictureView.C  pictureView.h  power.C  preferences.C  preferences.h  prefs.C  prefs.h  rawCW.C  rawCW.h  rawpaint.C  rawpaint.h  rawplot.C  rawplot.h  showVImage.C  (+3 more)
src/old/mattov/: CMakeLists.txt  mattov.c
src/old/v2ndlevel/: CMakeLists.txt  Makefile.am  Read2ndLevelDesign.c  v2ndlevel.c
src/old/vROIonesample_ttest/: CMakeLists.txt  vROIonesample_ttest.c
src/old/vROIpaired_ttest/: CMakeLists.txt  vROIpaired_ttest.c
src/old/vROIpaired_wilcoxtest/: CMakeLists.txt  vROIpaired_wilcoxtest.c
src/old/vROItwosample_ttest/: CMakeLists.txt  vROItwosample_ttest.c
src/old/vaddcovariates/: CMakeLists.txt  (+2 more)
src/scripts/: vnormalization  vnormdata  vpreproc_gui  vreg2ref  vregistration
(+464 files in other folders)
