#all new programs coming from the lipsia sandbox package
#isis related programs begin
add_subdirectory(valign3d)
add_subdirectory(vvinidi)
add_subdirectory(vswapdim)
add_subdirectory(vdotrans3d)
#end
add_subdirectory(vReHo)
add_subdirectory(vdespike)
add_subdirectory(vcheckdata)
add_subdirectory(vcorr)
add_subdirectory(vdenoise)
add_subdirectory(vecm)
add_subdirectory(veta2)
add_subdirectory(vgaussianize)
add_subdirectory(vnormvals)
add_subdirectory(volumeinfo)
add_subdirectory(vpowerspectrum)
add_subdirectory(vresiduals)
add_subdirectory(vsimmat)
add_subdirectory(vspectralcluster)
add_subdirectory(vspectralecm)
add_subdirectory(vsrad)
add_subdirectory(voverlap)
add_subdirectory(vcovariates)
add_subdirectory(vglobalmean)
add_subdirectory(vstats)
add_subdirectory(vsymmetric)
add_subdirectory(vpaired_ttest)
add_subdirectory(vrmglobal)
add_subdirectory(vccm)
add_subdirectory(vpaired_ccm)
add_subdirectory(vncm)
add_subdirectory(vcompcor)
