PROJECT(vtonifti)

INCLUDE_DIRECTORIES(${NIFTI_INCLUDE_DIR})

ADD_EXECUTABLE(vtonifti cniftifile.cpp cvimage.cpp main.cpp )
TARGET_LINK_LIBRARIES(vtonifti lipsia ${VIA_LIBRARY} ${NIFTI_NIFTIIO_LIBRARY} ${NIFTI_ZNZ_LIBRARY} ${ZLIB_LIBRARY})

SET_TARGET_PROPERTIES(vtonifti PROPERTIES
    LINK_FLAGS -Wl)

INSTALL(TARGETS vtonifti
        RUNTIME DESTINATION bin
        COMPONENT RuntimeLibraries)
