PROJECT(vReHo)


ADD_EXECUTABLE(vReHo vReHo.c Kendall.c)
TARGET_LINK_LIBRARIES(vReHo ${VIA_LIBRARY} ${BLAS_LIBRARY} ${LIPSIA_LIBRARY})

SET_TARGET_PROPERTIES(vReHo PROPERTIES
    LINK_FLAGS -Wl)

INSTALL(TARGETS vReHo
        RUNTIME DESTINATION ${LIPSIA_INSTALL_BIN_DIR}
        COMPONENT RuntimeLibraries)
