PROJECT(vartefact)
MESSAGE(STATUS ${FFTW3_LIBRARY})

ADD_EXECUTABLE(vartefact vartefact.c)
TARGET_LINK_LIBRARIES(vartefact ${VIA_LIBRARY} ${BLAS_LIBRARY} ${LIPSIA_LIBRARY} ${FFTW3_FFTW3_LIBRARY})

SET_TARGET_PROPERTIES(vartefact PROPERTIES
    LINK_FLAGS -Wl)

INSTALL(TARGETS vartefact
        RUNTIME DESTINATION ${LIPSIA_INSTALL_BIN_DIR}
        COMPONENT RuntimeLibraries)
