PROJECT(vartefact)

ADD_EXECUTABLE(vartefact vartefact.c)
TARGET_LINK_LIBRARIES(vartefact $ {VIAIO_LIBRARY} $ {GSL_GSL_LIBRARY} $ {GSL_CBLAS_LIBRARY} $ {LIPSIA_LIBRARY} $ {FFTW3_FFTW3_LIBRARY})

SET_TARGET_PROPERTIES(vartefact PROPERTIES
                      LINK_FLAGS -Wl)

INSTALL(TARGETS vartefact
        RUNTIME DESTINATION bin
        COMPONENT RuntimeLibraries)
