PROJECT(vcheckdata)


ADD_EXECUTABLE(vcheckdata vcheckdata.c)
TARGET_LINK_LIBRARIES(vcheckdata ${VIA_LIBRARY} ${BLAS_LIBRARY} ${LIPSIA_LIBRARY})

SET_TARGET_PROPERTIES(vcheckdata PROPERTIES
    LINK_FLAGS -Wl)

INSTALL(TARGETS vcheckdata
        RUNTIME DESTINATION ${LIPSIA_INSTALL_BIN_DIR}
        COMPONENT RuntimeLibraries)
