PROJECT(vcheckdata)


ADD_EXECUTABLE(vcheckdata vcheckdata.c)
TARGET_LINK_LIBRARIES(vcheckdata lipsia ${VIAIO_LIBRARY} ${GSL_GSL_LIBRARY} ${GSL_CBLAS_LIBRARY} ${LIPSIA_LIBRARY} ${FFTW3_FFTW3_LIBRARY})

SET_TARGET_PROPERTIES(vcheckdata PROPERTIES
                      LINK_FLAGS -Wl)

INSTALL(TARGETS vcheckdata
        RUNTIME DESTINATION bin
        COMPONENT RuntimeLibraries)
