PROJECT(vcorr)

ADD_EXECUTABLE(vcorr vcorr.c ROI.c MI.c KendallDist.c Correlation.c)
TARGET_LINK_LIBRARIES(vcorr ${VIA_LIBRARY} ${LIPSIA_LIBRARY})

SET_TARGET_PROPERTIES(vcorr PROPERTIES
    LINK_FLAGS -Wl)

INSTALL(TARGETS vcorr
        RUNTIME DESTINATION ${LIPSIA_INSTALL_BIN_DIR}
        COMPONENT RuntimeLibraries)
