PROJECT(vdenoise)

ADD_EXECUTABLE(vdenoise vdenoise.c)
TARGET_LINK_LIBRARIES(vdenoise $ {GSL_GSL_LIBRARY} $ {GSL_CBLAS_LIBRARY} $ {VIAIO_LIBRARY} $ {LIPSIA_LIBRARY})

SET_TARGET_PROPERTIES(vdenoise PROPERTIES
                      LINK_FLAGS -Wl)

INSTALL(TARGETS vdenoise
        RUNTIME DESTINATION bin
        COMPONENT RuntimeLibraries)
