PROJECT(veta2)


ADD_EXECUTABLE(veta2 veta2.c)
TARGET_LINK_LIBRARIES(veta2 ${VIAIO_LIBRARY} ${GSL_GSL_LIBRARY} ${GSL_CBLAS_LIBRARY} ${LIPSIA_LIBRARY})

SET_TARGET_PROPERTIES(veta2 PROPERTIES
                      LINK_FLAGS -Wl)

INSTALL(TARGETS veta2
        RUNTIME DESTINATION bin
        COMPONENT RuntimeLibraries)
