PROJECT(vglobalmean)

ADD_EXECUTABLE(vglobalmean vglobalmean.c)
TARGET_LINK_LIBRARIES(vglobalmean ${VIA_LIBRARY} ${LISPIA_LIBRARY})

SET_TARGET_PROPERTIES(vglobalmean PROPERTIES
    LINK_FLAGS -Wl)

INSTALL(TARGETS vglobalmean
        RUNTIME DESTINATION ${LIPSIA_INSTALL_BIN_DIR}
        COMPONENT RuntimeLibraries)
