PROJECT(vncm)


ADD_EXECUTABLE(vncm vncm.c)
TARGET_LINK_LIBRARIES(vncm ${VIAIO_LIBRARY}  ${LIPSIA_LIBRARY}
    ${GSL_GSL_LIBRARY} ${GSL_CBLAS_LIBRARY})

SET_TARGET_PROPERTIES(vncm PROPERTIES
                      LINK_FLAGS -Wl)

INSTALL(TARGETS vncm
        RUNTIME DESTINATION bin
        COMPONENT RuntimeLibraries)
