PROJECT(vnormvals)

ADD_EXECUTABLE(vnormvals vnormvals.c)
TARGET_LINK_LIBRARIES(vnormvals ${VIA_LIBRARY} ${LISPIA_LIBRARY})

SET_TARGET_PROPERTIES(vnormvals PROPERTIES
    LINK_FLAGS -Wl)

INSTALL(TARGETS vnormvals
        RUNTIME DESTINATION ${LIPSIA_INSTALL_BIN_DIR}
        COMPONENT RuntimeLibraries)
