PROJECT(voverlap)


ADD_EXECUTABLE(voverlap voverlap.c)
TARGET_LINK_LIBRARIES(voverlap ${VIA_LIBRARY} ${BLAS_LIBRARY} ${LIPSIA_LIBRARY})

SET_TARGET_PROPERTIES(voverlap PROPERTIES
    LINK_FLAGS -Wl)

INSTALL(TARGETS voverlap
        RUNTIME DESTINATION ${LIPSIA_INSTALL_BIN_DIR}
        COMPONENT RuntimeLibraries)
