PROJECT(voverlap)


ADD_EXECUTABLE(voverlap voverlap.c)
TARGET_LINK_LIBRARIES(voverlap $ {VIAIO_LIBRARY} $ {GSL_GSL_LIBRARY} $ {GSL_CBLAS_LIBRARY} $ {LIPSIA_LIBRARY})

SET_TARGET_PROPERTIES(voverlap PROPERTIES
                      LINK_FLAGS -Wl)

INSTALL(TARGETS voverlap
        RUNTIME DESTINATION bin
        COMPONENT RuntimeLibraries)
